--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hassle Free Mortgage, Refi, and Auto Loan Quotes/title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">	
 	</head>
 	<body>
 		<nav>
