--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hassle Free Mortgage, Refi, and Auto Loan Quotes/title>
+		<title>Hassle Free Mortgage, Refi, and Auto Loan Quotes</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">	
 	</head>
 	<body>
