--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>This URL is for sale. Please contact me with inquiries.</h1>
-				<p>Have a good day.</p>
+        		<h1>This URL (<a href="http://www.hasslefreerefi.com"/>), as well as the following URLs, are for sale. Please contact me with inquiries.</h1>
+			<ul>
+				<li><a href="http://www.alwayspreapproved.com"/></li>
+				<li><a href="http://www.everyonepreapproved.com"/></li>
+				<li><a href="http://www.financingisguaranteed.com"/></li>
+				<li><a href="http://www.nohasslerefi.com"/></li>
+				<li><a href="http://www.nocreditchecksneeded.com"/></li>
+				<li><a href="http://www.nohasslepreapproval.com"/></li>
+				<li><a href="http://www.yourepreapproved.com"/></li>
+				<li><a href="http://www.preapprovalforall.com"/></li>
+			</ul>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
