--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>This URL (<a href="http://www.hasslefreerefi.com"/>), as well as the following URLs, are for sale. Please contact me with inquiries.</h1>
+        		<h1>The following URLs are for sale. Please <a href="mailto:dlmdomainservices@gmail.com">contact me</a> with inquiries.</h1>
 			<ul>
+				<li><a href="http://www.hasslefreerefi.com"/></li>
 				<li><a href="http://www.alwayspreapproved.com"/></li>
 				<li><a href="http://www.everyonepreapproved.com"/></li>
 				<li><a href="http://www.financingisguaranteed.com"/></li>
@@ -31,7 +32,6 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:dlmdomainservices@gmail.com">email</a></li>
-        		<li><a href="https://github.com/dlmurphy2008">github.com/dlmurphy2008</a></li>
 			</ul>
 		</footer>
 	</body>
