--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     		<div class="blurb">
         		<h1>The following URLs are for sale. Please <a href="mailto:dlmdomainservices@gmail.com">contact me</a> with inquiries.</h1>
 			<ul>
-				<li><a href="http://www.hasslefreerefi.com"/></li>
-				<li><a href="http://www.alwayspreapproved.com"/></li>
-				<li><a href="http://www.everyonepreapproved.com"/></li>
-				<li><a href="http://www.financingisguaranteed.com"/></li>
-				<li><a href="http://www.nohasslerefi.com"/></li>
-				<li><a href="http://www.nocreditchecksneeded.com"/></li>
-				<li><a href="http://www.nohasslepreapproval.com"/></li>
-				<li><a href="http://www.yourepreapproved.com"/></li>
-				<li><a href="http://www.preapprovalforall.com"/></li>
+				<li><a href="http://www.hasslefreerefi.com">hasslefreerefi.com</a></li>
+				<li><a href="http://www.alwayspreapproved.com">alwayspreapproved.com</a></li>
+				<li><a href="http://www.everyonepreapproved.com">everyonepreapproved.com</a></li>
+				<li><a href="http://www.financingisguaranteed.com">financingisguaranteed.com</a></li>
+				<li><a href="http://www.nohasslerefi.com">nohasslerefi.com</a></li>
+				<li><a href="http://www.nocreditchecksneeded.com">nocreditchecksneeded.com</a></li>
+				<li><a href="http://www.nohasslepreapproval.com">nohasslepreapproval.com</a></li>
+				<li><a href="http://www.yourepreapproved.com">yourepreapproved.com</a></li>
+				<li><a href="http://www.preapprovalforall.com">preapprovalforall.com</a></li>
 			</ul>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
