--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hassle Free Mortgage, Refi, and Auto Loan Quotes</title>
+		<title>Detroit Financial Market News and Charts</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">	
 	</head>
 	<body>
@@ -15,18 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>The following URLs are for sale. Please <a href="mailto:dlmdomainservices@gmail.com">contact me</a> with inquiries.</h1>
-			<ul>
-				<li><a href="http://www.hasslefreerefi.com">hasslefreerefi.com</a></li>
-				<li><a href="http://www.alwayspreapproved.com">alwayspreapproved.com</a></li>
-				<li><a href="http://www.everyonepreapproved.com">everyonepreapproved.com</a></li>
-				<li><a href="http://www.financingisguaranteed.com">financingisguaranteed.com</a></li>
-				<li><a href="http://www.nohasslerefi.com">nohasslerefi.com</a></li>
-				<li><a href="http://www.nocreditchecksneeded.com">nocreditchecksneeded.com</a></li>
-				<li><a href="http://www.nohasslepreapproval.com">nohasslepreapproval.com</a></li>
-				<li><a href="http://www.yourepreapproved.com">yourepreapproved.com</a></li>
-				<li><a href="http://www.preapprovalforall.com">preapprovalforall.com</a></li>
-			</ul>
+        		<h1> Coming soon.
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
