--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:dlmdomainservices@gmail.com">email</a></li>
+        		<li><a href="http://www.twitter.com/det_money">twitter</a></li>
 			</ul>
 		</footer>
 	</body>
