--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
         		<h1> Coming soon.
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+			
+			<div id="sidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="#">About</a>
+  <a href="#">Detroit Corporations</a>
+  <a href="#">Proprietary Indeces</a>
+  <a href="#">SEC Filings</a>
+  <a href="#">News</a>
+  <a href="#">Blog</a>
+  <a href="#">Contact</a>
+</div>
+
+<span onclick="openNav()">open</span>
+
+<div id="main">
+</div>
 		<footer>
     		<ul>
         		<li><a href="http://www.twitter.com/det_money">twitter</a></li>
