--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/affiliates">Affiliates</a></li>
-        		<li><a href="/contact">Contact</a></li>
+	        	<li><a href="/indeces">Indeces</a></li>
+        		<li><a href="/secfilings">SEC Filings</a></li>
+        		<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
 		<div class="container">
