--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/indeces">Indeces</a></li>
         		<li><a href="/secfilings">SEC Filings</a></li>
+			<li><a href="/Contact">Contact</a></li>
         		<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
