--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1> Coming soon.
+        		<h1> 
+			<iframe src="https://www.widgets.investing.com/live-indices?theme=darkTheme&pairs=166,27,172,177,170" width="100%" height="100%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"></iframe><div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">Powered by <a href="https://www.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_INDICES&amp;utm_content=Footer%20Link" target="_blank" rel="nofollow">Investing.com</a></div>	
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 			
