--- a/index.html
+++ b/index.html
@@ -18,7 +18,40 @@
     		<div class="blurb">
 			<h1> Coming soon </h1>
     			<iframe src="https://www.widgets.investing.com/live-indices?theme=darkTheme&pairs=1600,270,1720,1770,1700" width="100%" height="100%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"></iframe><div class="Coming Soon" style="font-family: Arial, Helvetica, sans-serif;"><a href="https://www.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=LIVE_INDICES&amp;utm_content=Footer%20Link" target="_blank" rel="nofollow">DETmoney.com</a></div>	
-    		</div><!-- /.blurb -->
+    		
+
+			<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+  {
+  "symbols": [
+    {
+      "title": "S&P 500",
+      "proName": "INDEX:SPX"
+    },
+    {
+      "title": "Nasdaq 100",
+      "proName": "INDEX:IUXX"
+    },
+    {
+      "title": "EUR/USD",
+      "proName": "FX_IDC:EURUSD"
+    },
+    {
+      "title": "BTC/USD",
+      "proName": "BITFINEX:BTCUSD"
+    },
+    {
+      "title": "ETH/USD",
+      "proName": "BITFINEX:ETHUSD"
+    }
+  ],
+  "locale": "en"
+}
+  </script>
+</div>
+			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 			
 </div>
