--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       "proName": "INDEX:SPX"
     },
     {
-      "title": "Nasdaq 100",
-      "proName": "INDEX:IUXX"
+      "title": "General Motors",
+      "proName": "INDEX:GM"
     },
     {
       "title": "EUR/USD",
