--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="container">
     		<div class="blurb">
 			<h1> Coming soon. </h1>
-    						<div class="tradingview-widget-container">
+    						
+			<div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
@@ -28,20 +29,24 @@
       "proName": "INDEX:SPX"
     },
     {
-      "title": "General Motors",
+      "title": "GM",
       "proName": "INDEX:GM"
     },
     {
-      "title": "EUR/USD",
-      "proName": "FX_IDC:EURUSD"
+      "title": "Ford",
+      "proName": "Index:F"
     },
     {
-      "title": "BTC/USD",
-      "proName": "BITFINEX:BTCUSD"
+      "title": "FCAU",
+      "proName": "INDEX:FCAU"
     },
     {
-      "title": "ETH/USD",
-      "proName": "BITFINEX:ETHUSD"
+      "title": "Ally",
+      "proName": "INDEX:ALLY"
+    }
+	   {
+      "title": "Penske Automotive Group",
+      "proName": "INDEX:PAG"
     }
   ],
   "locale": "en"
