--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 }
   </script>
 </div>
+<h2>Quotes may be delayed. Information is provided 'as is' and solely for informational purposes, not for trading purposes or advice. </h2>		
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 			
