--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       "proName": "INDEX:ALLY"
     }
 	   {
-      "title": "Penske Automotive Group",
+      "title": "PAG",
       "proName": "INDEX:PAG"
     }
   ],
