--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<h1> Coming soon. </h1>
+			<h1> Coming soon</h1>
     						
 			<div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
