--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<h1> Coming soon.</h1>
+			<h1> Coming soon</h1>
     						
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <div class="tradingview-widget-copyright">
-	  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+	 
+	  
+	 <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
   {
   "symbols": [
     {
