--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<h1> Coming soon</h1>
-    						
+			<h1> Coming soon.</h1>
+    
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright">
-	 
-	  
-	 <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
   {
   "symbols": [
     {
@@ -31,30 +29,67 @@
       "proName": "INDEX:SPX"
     },
     {
-      "title": "GM",
-      "proName": "INDEX:GM"
+      "description": "GM",
+      "proName": "NYSE:GM"
     },
     {
-      "title": "Ford",
-      "proName": "Index:F"
+      "description": "Ford",
+      "proName": "NYSE:F"
     },
     {
-      "title": "FCAU",
-      "proName": "INDEX:FCAU"
+      "description": "Fiat Chrysler",
+      "proName": "NYSE:FCAU"
     },
     {
-      "title": "Ally",
-      "proName": "INDEX:ALLY"
-    }
-	   {
-      "title": "PAG",
-      "proName": "INDEX:PAG"
+      "description": "Magna",
+      "proName": "NYSE:MGA"
+    },
+    {
+      "description": "Ally Financial",
+      "proName": "NYSE:ALLY"
+    },
+    {
+      "description": "Penske",
+      "proName": "NYSE:PAG"
+    },
+    {
+      "description": "Lear Corp.",
+      "proName": "NYSE:LEA"
+    },
+    {
+      "description": "ADIENT",
+      "proName": "NYSE:ADNT"
+    },
+    {
+      "description": "American Axle",
+      "proName": "NYSE:AXL"
+    },
+    {
+      "description": "DowDuPont",
+      "proName": "NYSE:DWDP"
+    },
+    {
+      "description": "Delphi",
+      "proName": "NYSE:DLPH"
+    },
+    {
+      "description": "Masco",
+      "proName": "NYSE:MAS"
+    },
+    {
+      "description": "Visteon",
+      "proName": "NASDAQ:VC"
+    },
+    {
+      "description": "Meritor",
+      "proName": "NYSE:MTOR"
     }
   ],
   "locale": "en"
 }
   </script>
 </div>
+
 <h2>Quotes may be delayed. Information is provided 'as is' and solely for informational purposes, not for trading purposes or advice. </h2>		
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
