--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/indeces">Charts/Indeces</a></li>
+	        	<li><a href="/charts">Charts</a></li>
         		<li><a href="/secfilings">SEC Filings</a></li>
 			<li><a href="/Contact">Contact</a></li>
         		<li><a href="/about">About</a></li>
