--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<h1> Coming soon.</h1>
+			<h1> Coming soon</h1>
     
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com" rel="noopener" target="_blank"><span class="blue-text">Quotes</span></a> by TradingView</div>
+  <div class="tradingview-widget-copyright"></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
   {
   "symbols": [
