--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 			</ul>
 		</footer>
 	</body>
+
+function init() {
+ Tabletop.init( { key: ‘https://docs.google.com/spreadsheets/d/0AmYzu_s7QHsmdDNZUzRlYldnWTZCLXdrMXlYQzVxSFE/pubhtml',
+ callback: function(data, tabletop) { 
+ console.log(data)
+ },
+ simpleSheet: true } )
+}
 	
 			
 </html>
