--- a/index.html
+++ b/index.html
@@ -94,14 +94,33 @@
 <div>
 	
 	function init() {
- Tabletop.init( { key: ‘https://docs.google.com/spreadsheets/d/1ZjU3c_pzV8GgmoE4-uApBrKo_VOfUmLOBs3ZIETCWb8/pubhtml',
- callback: function(data, tabletop) { 
- console.log(data)
- },
- simpleSheet: true } )
+  Tabletop.init( { key: 'https://docs.google.com/spreadsheets/d/0AmYzu_s7QHsmdDNZUzRlYldnWTZCLXdrMXlYQzVxSFE/pubhtml',
+                   callback: function(data, tabletop) { 
+                       console.log(data)
+                   },
+                   simpleSheet: true } )
 }
+window.addEventListener('DOMContentLoaded', init)
 	
 			</div>
+			
+			<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+<script type='text/javascript'>    
+  var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR9B_LbNU0mZzmex2igfB9rdxwPwbUHMpJLZDnPp0Qq9TghSD1adaeQlthMESTx25eC6NsIvVw6xSrw/pubhtml?gid=145255793&single=true';
+
+  function init() {
+    Tabletop.init( { key: publicSpreadsheetUrl,
+                     callback: showInfo,
+                     simpleSheet: true } )
+  }
+
+  function showInfo(data, tabletop) {
+    alert('Successfully processed!')
+    console.log(data);
+  }
+
+  window.addEventListener('DOMContentLoaded', init)
+</script>
 
 <h2>Quotes may be delayed. Information is provided 'as is' and solely for informational purposes, not for trading purposes or advice. </h2>		
 			</div><!-- /.blurb -->
