--- a/index.html
+++ b/index.html
@@ -90,20 +90,10 @@
 }
   </script>
 </div>
+
+			<script async src="./javascript/index.js"></script>
 			
-<div>
-	
-	function init() {
-  Tabletop.init( { key: 'https://docs.google.com/spreadsheets/d/0AmYzu_s7QHsmdDNZUzRlYldnWTZCLXdrMXlYQzVxSFE/pubhtml',
-                   callback: function(data, tabletop) { 
-                       console.log(data)
-                   },
-                   simpleSheet: true } )
-}
-window.addEventListener('DOMContentLoaded', init)
-	
-			</div>
-			
+		
 			<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 <script type='text/javascript'>    
   var publicSpreadsheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR9B_LbNU0mZzmex2igfB9rdxwPwbUHMpJLZDnPp0Qq9TghSD1adaeQlthMESTx25eC6NsIvVw6xSrw/pubhtml?gid=145255793&single=true';
